--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ img {
 }
 
 .dark {
-	background: #37FF00;
+	background: #333333;
 	color: #fff;
 }
 
@@ -275,7 +275,7 @@ section {
 
 .overlay:after {
     content: "";
-	background: rgba(0,0,0,.2);
+	background: rgba(55,255,0,.2);
     top: 0;
     left: 0;
     bottom: 0;
